--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,28 +1,80 @@
-.products-img {
-    height: 100px;
-    width: 100px;
+.services-h2 {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 50px;
+}
+
+.info-p {
+    font-size: 25px;
+    padding-left: 20px;
+    padding-right: 40px;
+    text-align: center;
+}
+
+
+
+
+.services-sec {
+    display: flex;
+    flex-wrap: wrap;
+    background: #577C46;
+    border-radius: 12px;
+    padding: 20px;
+    justify-content: space-around;
+
+}
+
+.services-div {
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    background-color: antiquewhite;
+    width: 350px;
+    height: 400px;
+    border-radius: 12px;
+    margin: 20px;
+    padding-top: 10px;
+    padding-right: 15px;
+    align-items: center;
+}
+
+.services-img {
+    height: 200px;
+    width: 250px;
     margin-top: 22px;
     margin-left: 20px;
     border-radius: 12px;
 }
 
-.products-sec {
-    display: flex;
-    flex-wrap: wrap;
+
+
+
+.services-ul {
+    margin-top: 20px;
+    list-style-type: none;
 
 }
 
-.products-ul {
-    margin-top: 40px;
+.services-name {
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: 600;
 
 }
 
-.products-div {
+.services-li {
+    margin-bottom: 30px;
+}
+
+.btn-div {
     display: flex;
-    flex-wrap: wrap;
-    background-color: antiquewhite;
-    width: 350px;
-    height: 150px;
+    justify-content: space-between;
+
+}
+
+.request-btn {
     border-radius: 12px;
-    margin: 20px;
+    background-color: #577C46;
+    color: antiquewhite;
+    align-self: center;
 }
