--- a/src/components/homePage/home.css
+++ b/src/components/homePage/home.css
@@ -103,6 +103,12 @@
 
 }
 
+.locations-h2 {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 50px;
+}
+
 .locations-div {}
 
 
@@ -138,3 +144,26 @@
 .locations-ul {}
 
 .locations-li {}
+
+.to-services {
+    background-color: #426333;
+    color: aliceblue;
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 800;
+    border-radius: 100px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+}
+
+.to-services:hover {
+    background-color: aliceblue;
+    color: black;
+}
+
+.to-services-div {
+    display: flex;
+    justify-content: center;
+}
