--- a/src/components/views/Views.css
+++ b/src/components/views/Views.css
@@ -23,3 +23,49 @@ hr {
     transform: rotate(-0.09deg);
     margin-top: 80px;
 }
+
+.footer-section {
+    margin-right: auto;
+    margin-left: auto;
+    width: 800px;
+    margin-top: 100px;
+}
+
+.footer-h3 {
+    text-align: center;
+}
+
+.footer-div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer-ul {
+    list-style: none;
+
+}
+
+.footer-li-1 {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.footer-li {
+    padding-left: 10px;
+}
+
+.footer-h4 {
+    text-align: center;
+    margin: 0;
+    margin-top: 20px;
+
+}
+
+.footer-h5 {
+    margin-top: 2px;
+    padding-bottom: 12px;
+    text-align: center;
+
+}
