--- a/src/components/EmployeeMessages/Messages.css
+++ b/src/components/EmployeeMessages/Messages.css
@@ -13,6 +13,7 @@
 
 .div-aside-mes {
     float: left;
+
 }
 
 .customer-ms-aside {
@@ -34,17 +35,46 @@
     font-weight: 600;
 }
 
+.newmes-ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.newmes-li {
+    text-align: center;
+    background-color: rgb(44, 136, 216);
+    color: rgb(245, 238, 238);
+    font-weight: 500px;
+    border-radius: 12px;
+    display: flex;
+    padding: 6px;
+    height: 17px;
+    padding-top: 6px;
+    margin-left: 5px;
+    margin-top: 17px;
+}
+
 .send-mes {
     background-color: rgb(38, 62, 165);
     color: antiquewhite;
-    width: 80px;
+    width: 140px;
+    margin-right: 40px;
+    margin-left: 10px;
     border-radius: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.send-mes:hover {
+    background-color: aliceblue;
+    color: black;
 }
 
 .mes-div {
     display: flex;
     flex-direction: column;
+    min-height: 800px;
 }
 
 .sent-div {}
@@ -79,15 +109,28 @@
 .message-div-c {
     background-color: rgb(14, 130, 207);
     width: 600px;
-    height: 100px;
+    min-height: auto;
     list-style: none;
     padding-top: 20px;
     font-size: 20px;
     border-radius: 100px;
     margin-left: 50px;
     display: flex;
-    float: right;
 
+    padding-bottom: 40px;
+    float: right;
+    flex-direction: column;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.meassages-date-c {
+    font-size: 14px;
+    color: rgb(246, 248, 250);
+}
+
+.meassages-date-e {
+    font-size: 14px;
+    color: rgb(14, 117, 207);
 }
 
 .message-div-e {
@@ -96,20 +139,33 @@
     max-width: 800px;
     height: 100px;
     display: flex;
+    flex-direction: column;
     list-style: none;
     padding-top: 20px;
+
     font-size: 20px;
     border-radius: 100px;
     margin-right: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .meassages-li {
     max-width: 500px;
     margin: 10px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.meassages-li-e {
+    max-width: 500px;
+    margin: 10px;
+    margin-top: 5px;
+    margin-bottom: 40px;
 
 }
 
 .meassages-li-delete {
-    margin: 20px;
-    margin-top: 40px;
+    margin: 0%;
+    margin-left: 480px;
+    margin-bottom: 20px;
 }
