--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -10,10 +10,19 @@ fieldset {
     border: 0;
 }
 
+.sec-login {
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+
+
 .form--login {
     display: inline-block;
     margin: 0 auto;
     text-align: left;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .form--login>fieldset>input[type="email"] {
